--- a/view/challenge1.html
+++ b/view/challenge1.html
@@ -12,7 +12,7 @@
         <h1>DAY 1</h1>
         <p>Escribe un programa que reciba un texto y transforme lenguaje natural a
             "lenguaje hacker" (conocido realmente como "leet" o "1337"). Este lenguaje
-            se caracteriza por sustituir caracteres alfanuméricos.
+            se caracteriza por sustituir caracteres alfanuméricos.<br>
             Utiliza esta tabla (https://www.gamehouse.com/blog/leet-speak-cheat-sheet/) 
             con el alfabeto y los números en "leet".
             (Usa la primera opción de cada transformación. Por ejemplo "4" para la "a")</p>
@@ -22,6 +22,8 @@
                 <button type="button" id="btnSubmit">Translate</button>
             </form>
             <p id="txt"></p>
+            
+            <button id="home">Home</button>
     </div>
 </body>
 </html>
