--- a/view/challenge2.html
+++ b/view/challenge2.html
@@ -5,28 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge 2</title>
     <link rel="stylesheet" href="../challengeStyle.css">
-    
+    <script src="/dist/reto2/tenis_match.js"></script>
 </head>
 <body>
     <div class="container" id="tenis">
         <h1>DAY 2</h1>
         <p>Escribe un programa que muestre cómo transcurre un juego de tenis y quién lo ha ganado.
             El programa recibirá una secuencia formada por "P1" (Player 1) o "P2" (Player 2), según quien
-            gane cada punto del juego.
-            
-            - Las puntuaciones de un juego son "Love" (cero), 15, 30, 40, "Deuce" (empate), ventaja.
-            - Ante la secuencia [P1, P1, P2, P2, P1, P2, P1, P1], el programa mostraría lo siguiente:
-            15 - Love
-            30 - Love
-            30 - 15
-            30 - 30
-            40 - 30
-            Deuce
-            Ventaja P1
-            Ha ganado el P1
-            - Si quieres, puedes controlar errores en la entrada de datos.   
+            gane cada punto del juego.<br>
+            <br>
+            - Las puntuaciones de un juego son "Love" (cero), 15, 30, 40, "Deuce" (empate), ventaja.<br>
+            - Ante la secuencia [P1, P1, P2, P2, P1, P2, P1, P1], el programa mostraría lo siguiente:<br>
+            15 - Love<br>
+            30 - Love<br>
+            30 - 15<br>
+            30 - 30<br>
+            40 - 30<br>
+            Deuce<br>
+            Ventaja P1<br>
+            Ha ganado el P1<br>
+            - Si quieres, puedes controlar errores en la entrada de datos.   <br>
             - Consulta las reglas del juego si tienes dudas sobre el sistema de puntos.</p>
-            
+            <button id="player1">P1</button>
+            <button id="player2">P2</button>
+            <h3>Score</h3>
+            <ul id="score">
+            </ul>
+            <br>
+            <button id="btnReset">Reset</button>
+            <br>
+            <button id="home">Home</button>
     </div>
 </body>
 </html>
