--- a/view/challenge2.html
+++ b/view/challenge2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge 2</title>
     <link rel="stylesheet" href="../challengeStyle.css">
-    <script src="/dist/reto2/tenis_match.js"></script>
+    <script src="/dist/challenge2/tenis_match.js"></script>
 </head>
 <body>
     <div class="container" id="tenis">
