challenge5: lizard spock against bot and 1 v 1

--- a/challengeStyle.css
+++ b/challengeStyle.css
@@ -50,3 +50,9 @@ button{
 label{
     padding-left: 10px;
 }
+#options button {
+    border-radius: 5px;
+    padding: 0; 
+    cursor: pointer;
+}
+
